--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <div class="dropdown">
                 <div class="logo dropdown-toggle">Attendance Register</div>
                 <div class="dropdown-menu">
-                    <a href="at1.html">Generate Attendance Register</a>
+                    <a href="attendance.html">Generate Attendance Register</a>
                                    </div>
                             </div>
 
