--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
                     <a href="attendance.html">Generate Attendance Register</a>
                                    </div>
                             </div>
+            <div class="logo dropdown-toggle">Marks Entry System</div>
+                <div class="dropdown-menu">
+                    <a href="markfirst.html">Different Modules</a>
+                                   </div>
+                            </div>
 
         </nav>
         <div class="hero-content">
