--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                     <a href="attendance.html">Generate Attendance Register</a>
                                    </div>
                             </div>
+<div class="dropdown">
             <div class="logo dropdown-toggle">Marks Entry System</div>
                 <div class="dropdown-menu">
                     <a href="markfirst.html">Different Modules</a>
