--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                     <a href="markfirst.html">Different Modules</a>
                                    </div>
                             </div>
+             </div>
 
         </nav>
         <div class="hero-content">
