--- a/attendance.html
+++ b/attendance.html
@@ -100,24 +100,24 @@
     @media print {
       @page {
         size: legal landscape;
-        margin: 0.5cm;
+        margin: 0.5cm 0.1cm 0.3cm 0.5cm;
       }
       body {
-        margin: 0;
-        padding: 0;
+        margin: 0.5cm 0.2cm 0.3cm 0.9cm;
+        padding: 4px;
       }
       table {
         width: 100%;
-        font-size: 10px;
+        font-size: 12px;
         table-layout: fixed;
       }
 
       /* Print-specific column widths */
-      th:first-child, td:first-child { width: 40px; }
-      th:nth-child(2), td:nth-child(2) { width: 100px; }
-      th:nth-child(3), td:nth-child(3) { width: 50px; }
-      th:nth-child(4), td:nth-child(4) { width: 180px; }
-      th:nth-child(n+5), td:nth-child(n+5) { width: 20px; }
+      th:first-child, td:first-child { width: 25px; }
+      th:nth-child(2), td:nth-child(2) { width: 110px; }
+      th:nth-child(3), td:nth-child(3) { width: 55px; }
+      th:nth-child(4), td:nth-child(4) { width: 190px; }
+      th:nth-child(n+5), td:nth-child(n+5) { width: 24px; }
       th, td {
         padding: 0px;
         height: 20px;
@@ -143,20 +143,33 @@
             font-weight: bold;
        }
 
-    }
+.summary-table {
+    page-break-inside: avoid;
+  }
 .header-line {
   margin: 0;
-  line-height: 1.2;
+  line-height: 1;
 }
 
 .school-name {
-  font-size: 20px;
-  font-weight: bold;
-}
+    font-size: 22pt !important;
+    margin-bottom: 0.1cm !important;
+  }
 
 .register-title {
-  font-size: 18px;
+    font-size: 18pt !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+.class-month-heading {
+    font-size: 16pt !important;
+    font-weight: bold;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    text-align: center;
+  }
 }
+
   </style>
 </head>
 <body>
@@ -275,7 +288,7 @@
 
 
       // Generate main attendance table
-      let tableHTML = `<table class="main-table"><thead><tr><th>Roll No</th><th>Unique ID</th><th>Adm No</th><th>Student Name</th>`;
+      let tableHTML = `<table class="main-table"><thead><tr><th>Roll</th><th>Unique ID</th><th>Adm No</th><th>Student Name</th>`;
       for (let i = 1; i <= daysInMonth; i++) {
         // Add day header - no changes needed here for Sunday display
         tableHTML += `<th>${i}</th>`;
