--- a/page3.html
+++ b/page3.html
@@ -29,6 +29,7 @@
         box-sizing: border-box;
         display: flex;
         gap: 20px;
+        margin-left: 60px;
     }
 .container {
     position: relative;
