--- a/attendance.html
+++ b/attendance.html
@@ -191,20 +191,7 @@
       <option value="Class VIII A">Class VIII A</option>
       <option value="Class VIII B">Class VIII B</option>
     </select>
-    <select id="monthSelect">
-      <option value="January">January</option>
-      <option value="February">February</option>
-      <option value="March">March</option>
-      <option value="April">April</option>
-      <option value="May">May</option>
-      <option value="June">June</option>
-      <option value="July">July</option>
-      <option value="August">August</option>
-      <option value="September">September</option>
-      <option value="October">October</option>
-      <option value="November">November</option>
-      <option value="December">December</option>
-    </select>
+<select id="monthSelect"></select>
     <input type="file" id="fileInput" accept=".xlsx, .xls" style="display:none" />
     <button onclick="document.getElementById('fileInput').click()">Upload Excel</button>
     <button id="generateBtn" onclick="generateTable()" disabled>Generate</button>
@@ -221,6 +208,38 @@
       option.textContent = `${year}-${year+1}`;
       sessionSelect.appendChild(option);
     }
+     const monthSelect = document.getElementById('monthSelect');
+
+const monthsOrder = [
+  "April", "May", "June", "July", "August", "September",
+  "October", "November", "December",
+  "January", "February", "March"
+];
+
+function populateMonths() {
+  monthSelect.innerHTML = "";
+
+  const sessionValue = sessionSelect.value;
+  if (!sessionValue) return;
+
+  const startYear = parseInt(sessionValue.split('-')[0]);
+
+  monthsOrder.forEach(month => {
+    const option = document.createElement('option');
+
+    let year = (["January", "February", "March"].includes(month))
+      ? startYear + 1
+      : startYear;
+
+    option.value = `${month}|${year}`;
+    option.textContent = `${month} ${year}`;
+    monthSelect.appendChild(option);
+  });
+}
+
+sessionSelect.addEventListener('change', populateMonths);
+populateMonths();
+ 
 
     let workbookData = null;
     let studentData = [];
@@ -253,10 +272,12 @@
     }
 
     function generateTable() {
-      const month = document.getElementById('monthSelect').value;
-      const sessionValue = document.getElementById('session').value;
-      // Ensure sessionValue is correctly parsed, handling potential errors
-      const year = parseInt(sessionValue.split('-')[0]);
+      const monthValue = document.getElementById('monthSelect').value;
+const [month, yearStr] = monthValue.split('|');
+const year = parseInt(yearStr);
+
+const sessionValue = document.getElementById('session').value;
+
       if (isNaN(year)) {
           alert("Invalid session selected.");
           return;
@@ -363,7 +384,8 @@
         </tr>
         </tbody></table>`;
 
-      document.getElementById('heading').innerHTML = `Session: ${session} | Class: ${className} | Month: ${month}`;
+      document.getElementById('heading').innerHTML = `Session: ${session} | Class: ${className} | Month: ${month} ${year}`;
+
       document.getElementById('tableContainer').innerHTML = tableHTML;
 
       document.getElementById('printBtn').disabled = false;
@@ -371,3 +393,4 @@
   </script>
 </body>
 </html>
+
